--- a/apps/poc-typeorm/package.json
+++ b/apps/poc-typeorm/package.json
@@ -3,6 +3,7 @@
     "exec": "ts-node ./src/index.ts"
   },
   "dependencies": {
+    "mysql": "^2.18.1",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.20"
   },
