--- a/apps/poc-typeorm/package.json
+++ b/apps/poc-typeorm/package.json
@@ -3,11 +3,13 @@
     "exec": "ts-node ./src/index.ts"
   },
   "dependencies": {
-    "mysql": "^2.18.1",
+    "lodash": "^4.17.21",
+    "mysql2": "^3.11.3",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.10",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
